# torchlensmaker

./: .gitignore  CODE_OF_CONDUCT.md  DEVELOPMENT.md  README.md  README_draft.md  lens.json  mkdocs.yml  pyproject.toml  roadmap.md  ruff.toml  tlmviewer-0.0.10.js  tlmviewer-0.0.7.js
.claude/: export_design.md  (+12 more)
indicio/: .gitignore  LICENSE  README.md  pyproject.toml
indicio/examples/: example1.py  example2.py  example_evaluation_numpy.py  example_evaluation_stdlib.py  example_plot.py
indicio/scripts/: build_database.py  survey_types.py
indicio/src/indicio/: __init__.py  _loader.py  database.py  models.py
indicio/tests/: conftest.py  test_api.py  test_database.py
tlmviewer-python/: pyproject.toml
tlmviewer-python/src/tlmviewer/: __init__.py  http.py  push.py  serialize.py  source.py  types.py
tlmviewer-python/tests/: conftest.py  test_push.py  test_serialize.py
torchimplicit/: pyproject.toml
torchimplicit/examples/: example_plot_2d.py  example_plot_3d.py
torchimplicit/src/torchimplicit/: __init__.py  domain.py  implicit_circle.py  implicit_cube.py  implicit_cylinder.py  implicit_disk.py  implicit_plane.py  implicit_sphere.py  lift_functions.py  math.py  registry.py  sag_functions.py  types.py
torchimplicit/tests/: conftest.py  test_implicit_functions.py  test_sag_functions.py
torchlensmaker/: .coveragerc  conftest.py  export3d.py  pyproject.toml  raytracing.py  shapes.py  training.py
torchlensmaker/dev_notebooks/: XYPolynomial.ipynb  biconvex_parabola_nolens.ipynb  bounding_cylinder.ipynb  collision_detection_view_testcase.ipynb  doc_normalization.ipynb  ernostar_1928.ipynb  interval_arithmetic.ipynb  material_models.ipynb  moving_to_focus.ipynb  optimize_rsm_2d.ipynb  plot_magnification.ipynb  prograde_retrograde.ipynb  render_scene.ipynb  side_quest.ipynb  surfaces_sdf.ipynb  test_reverse.ipynb  tir.ipynb
torchlensmaker/examples/: cooke_triplet.ipynb  index_example.ipynb  landscape.ipynb  opl_optimization.py  paraxial_focal_length.ipynb  rainbow.ipynb  rainbow.py  reflecting_telescope.ipynb  reflection_and_refraction.ipynb  refractive_index_database.ipynb  simple_optimization.ipynb  snells_window.ipynb  triple_biconvex.ipynb  variable_lens_sequence.ipynb
torchlensmaker/scripts/: build_examples.py  license_header.py  nbstripall.sh
torchlensmaker/src/torchlensmaker/: __init__.py  optimize.py  parametric_solver.py  types.py
torchlensmaker/src/torchlensmaker/analysis/: CET_I2.py  airy_disk.py  colors.py  plot_magnification.py  plot_material_model.py  spot_diagram.py
torchlensmaker/src/torchlensmaker/core/: base_module.py  cylinder_collision.py  functional_kernel.py  geometry.py  interp1d.py  parameter.py  ray_bundle.py  rot2d.py  sampled_variable.py  solve3.py  tensor_manip.py
torchlensmaker/src/torchlensmaker/core/tests/: test_deep_forward.py  test_functional_kernel.py  test_interp1d.py  test_multi_forward.py  test_ray_bundle.py  test_sampled_variable.py  test_solve3.py
torchlensmaker/src/torchlensmaker/implicit/: __init__.py  implicit_circle.py  implicit_cylinder.py  implicit_disk.py  implicit_plane.py  implicit_sphere.py  math.py
torchlensmaker/src/torchlensmaker/implicit/tests/: conftest.py  test_implicit_functions.py
torchlensmaker/src/torchlensmaker/kinematics/: homogeneous_geometry.py  kinematics_elements.py
torchlensmaker/src/torchlensmaker/kinematics/tests/: test_homogeneous_geometry.py  test_kinematics_elements.py  test_kinematics_kernels.py
torchlensmaker/src/torchlensmaker/lens/: lens.py  lens_thickness.py  position_gap.py
torchlensmaker/src/torchlensmaker/lens/tests/: test_lens_thickness.py
torchlensmaker/src/torchlensmaker/lenses/: __init__.py  lens_constructors.py
torchlensmaker/src/torchlensmaker/lenses/tests/: test_lens_constructors.py  test_spherical_lenses.py
torchlensmaker/src/torchlensmaker/light_sources/: light_sources_elements.py  source_geometry_elements.py  source_geometry_kernels.py
torchlensmaker/src/torchlensmaker/light_sources/tests/: test_source_type_kernels.py
torchlensmaker/src/torchlensmaker/light_targets/: focal_point.py  image_plane.py  light_target.py
torchlensmaker/src/torchlensmaker/materials/: from_indicio.py  get_material_model.py  material_elements.py  material_kernels.py
torchlensmaker/src/torchlensmaker/materials/tests/: test_from_indicio.py  test_material_elements.py  test_material_kernels.py
torchlensmaker/src/torchlensmaker/optical_surfaces/: aperture.py  optical_surface.py  reflective_surface.py  refractive_surface.py
torchlensmaker/src/torchlensmaker/paraxial/: __init__.py  paraxial.py
torchlensmaker/src/torchlensmaker/paraxial/tests/: test_paraxial.py
torchlensmaker/src/torchlensmaker/physics/: physics.py  physics_kernels.py
torchlensmaker/src/torchlensmaker/raytracing/: implicit_solver.py  implicit_solver_config.py  parametric_solver.py  parametric_solver_config.py  surface_raytrace.py
torchlensmaker/src/torchlensmaker/sampling/: sampler_elements.py  sampling.py  sampling_kernels.py
torchlensmaker/src/torchlensmaker/sequential/: model_trace.py  optical_path.py  optical_trace.py  raytrace.py  sequential.py  sequential_data.py  utils.py
torchlensmaker/src/torchlensmaker/surfaces/: __init__.py  implicit_cylinder.py  implicit_solver.py  kernels_utils.py  lift_functions.py  parametric_solver.py  parametric_solver_config.py  raytrace.py  sag_functions.py  sag_geometry.py  sag_surface.py  solver_config.py  surface_anchor.py  surface_asphere.py  surface_bspline.py  surface_conic.py  surface_disk.py  surface_element.py  surface_implicit.py  surface_implicit_disk.py  surface_parabola.py  surface_plane.py  surface_point.py  surface_polar_bspline.py  surface_sag.py  surface_sphere.py  surface_sphere_by_curvature.py  surface_sphere_by_radius.py  surface_square.py  surface_xypolynomial.py
torchlensmaker/src/torchlensmaker/testing/: test_functional_kernels_testing.py
torchlensmaker/src/torchlensmaker/viewer/: render_model_trace.py  show.py  tlmviewer.py
torchlensmaker/tests/: test_cartesian_product.py  test_elements.py  test_interp1d.py  test_query.py  test_rot2d.py
(+1246 files in other folders)
