[project]
name = "torchlensmaker"
version = "0.0.11"
authors = [
  { name="Victor Poughon", email="victor.poughon@gmail.com" }
]
description = "Differentiable geometric optics in PyTorch. Design optical systems with optimization."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "torch>=2.4.1,<2.8.0",
  "build123d ~= 0.9.1",
  "matplotlib>=3.9.2,<3.11.0",
  "colorcet >= 3",
  "notebook >= 7",
  "onnx>=1.20.0",
  "onnxscript>=0.5.7",
  "jaxtyping>=0.3.5",
]

[project.optional-dependencies]
test = [
    "nbstripout-fast",
    "nbmake~=1.5.4",
    "pytest>=8.3.3,<8.5.0",
    "nbstripout",
    "onnxruntime>=1.23.2",
]
dev = [
    "ruff>=0.11.2",
]

[project.urls]
Homepage = "https://github.com/victorpoughon/torchlensmaker"
Issues = "https://github.com/victorpoughon/torchlensmaker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "docs/src/",
  "test_notebooks/",
  "drafts",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["torchlensmaker"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
