[project]
name = "indicio"
version = "1.0.0"
description = "Python interface to refractiveindex.info that ships the database"
readme = "README.md"
authors = [
    { name = "Victor Poughon", email = "victor.poughon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
