[project]
name = "tlmviewer"
version = "0.0.14"
description = "Python API for tlmviewer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Victor Poughon", email = "victor.poughon@gmail.com" }
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
