[project]
name = "torchimplicit"
version = "0.1.0"
description = "Implicit 2D and 3D surfaces in PyTorch"
readme = "README.md"
authors = [
    { name = "Victor Poughon", email = "victor.poughon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scikit-image>=0.26.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = "none"
