[project]
name = "torchlensmaker"
version = "0.0.14"
authors = [{ name = "Victor Poughon", email = "victor.poughon@gmail.com" }]
description = "Differentiable geometric optics in PyTorch. Design optical systems with modern GPU optimization."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
  "matplotlib>=3.9.2,<3.11.0",
  "jaxtyping>=0.3.5",
  "ipython>=8.31.0",
  "tlmviewer",
  "torchimplicit",
  "indicio>=1.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.3,<9.1.0",
  "notebook >= 7",
  "nbmake~=1.5.4",
  "nbstripout-fast",
  "onnxruntime>=1.23.2",
]
dev = ["ruff>=0.15.9", "basedpyright>=1.38.2"]
onnx = ["onnx>=1.20.0", "onnxscript>=0.5.7"]

[tool.uv]
exclude-dependencies = [
    "torch",
]

[project.urls]
Homepage = "https://github.com/victorpoughon/torchlensmaker"
Issues = "https://github.com/victorpoughon/torchlensmaker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["docs/src/", "test_notebooks/", "drafts"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["torchlensmaker"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = "none"

[tool.uv.sources]
tlmviewer = { path = "../tlmviewer-python/", editable = true }
torchimplicit = { path ="../torchimplicit", editable = true }
